docs/gitea/gitea-deployment-config.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gitea
  name: gitea
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gitea
    deploymentconfig: gitea
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: gitea
        deploymentconfig: gitea
    spec:
      containers:
      - image: quay.io/gpte-devops-automation/gitea:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: gitea
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /gitea-repositories
          name: gitea-repositories
        - mountPath: /home/gitea/conf
          name: gitea-config
        - mountPath: /data/.ssh
          name: data-ssh
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: gitea
      serviceAccountName: gitea
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitea-repositories
        persistentVolumeClaim:
          claimName: gitea-repositories
      - emptyDir: {}
        name: data-ssh
      - configMap:
          defaultMode: 420
          items:
          - key: app.ini
            path: app.ini
          name: gitea-config
        name: gitea-config
  test: false
  triggers:
  - type: ConfigChange
