docs/gitea/gitea-postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-postgresql
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: gitea-postgresql
  sessionAffinity: None
  type: ClusterIP
