docs/gitea/gitea-service-ext-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ext-lb
spec:
  ports:
  - name: ssh
    port: 2022
    targetPort: 2022
  - name: http
    port: 80
    targetPort: 3000
  loadBalancerIP:
  type: LoadBalancer
  selector:
    app: gitea
    deploymentconfig: gitea
