docs/gitea/gitea-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea
    deploymentconfig: gitea
  sessionAffinity: None
  type: ClusterIP
