docs/gitea/gitea-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitea
  name: gitea
spec:
  host: gitea.apps.tssc.rht-set.com
  to:
    kind: Service
    name: gitea
    weight: 100
  wildcardPolicy: None
